--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -438,7 +438,8 @@ hr {
 
 @media only screen and (max-width : 480px){
   .flex-row > [class*='col-'] {
-      width: 100%;
+	width: 95%;
+    margin: 10px auto;
   }
   .flex-row  {
     padding-left: 0px;
